# monocular-visual-slam

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
benchmarks/: run_kitti_bench.py
slam/: __init__.py  bundle_adjustment.py  calibration.py  config.py  feature_extraction.py  feature_matching.py  imu_interface.py  keyframe_manager.py  kitti_evaluation.py  kitti_loader.py  loop_closure.py  main.py  map_manager.py  pose_estimation.py  relocalization.py  scale_estimator.py  trajectory.py  triangulation.py  visualization.py
tests/: test_kitti_evaluation.py
tools/: convert_svgs.py  plot_kitti_trajectory.py
